# SonneShop

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  alembic.ini  backend-example  docker-compose.yaml  test_redis.py
backend/: Dockerfile  __main__.py  alembic.ini  pyproject.toml
backend/api/v1/endpoints/: healthcheck.py
backend/cache/core/: client.py
backend/common/: exceptions.py  types.py
backend/common/dto/: __init__.py  healthcheck.py  product.py  user.py
backend/common/exceptions/: __init__.py  database.py  routers.py
backend/common/interfaces/: context.py  crud.py  gateway.py  hasher.py
backend/database/: factory.py  gateway.py
backend/database/core/: __init__.py  connection.py  manager.py
backend/database/migrations/: env.py
backend/database/models/: __init__.py  account.py  product.py  transaction.py  user.py
backend/database/models/base/: core.py
backend/database/models/mixins/: __init__.py  with_datetime.py  with_id.py
backend/database/repositories/: __init__.py  account.py  base.py  crud.py  product.py  user.py
backend/security/: bcrypt_hasher.py  jwt_token.py  pwd_context.py
backend/settings/: app.py  dependencies.py  endpoints.py  env.py
backend/utils/: singleton.py
backend/utils/providers/: stub.py
src/: Dockerfile  __main__.py  alembic.ini  pyproject.toml  requirements.txt
src/api/: setup.py
src/api/common/: exceptions.py
src/api/common/mediator/: mediator.py  proxy.py  register.py
src/api/common/responses/: __init__.py
src/api/v1/: dependencies.py  setup.py
src/api/v1/docs/: account.py  auth.py  (+5 more)
src/cache/core/: client.py
src/common/: tools.py  types.py
src/common/dto/: __init__.py  account.py  healthcheck.py  product.py  stock_log.py  token.py  transaction.py  user.py  warehouse.py
src/common/enum/: operation.py
src/common/exceptions/: __init__.py  routers.py  services.py
src/common/interfaces/: context.py  crud.py  gateway.py
src/core/: settings.py
src/database/: converter.py  factory.py  gateway.py
src/database/core/: connection.py  manager.py
src/database/migrations/: env.py
src/database/models/: __init__.py  account.py  product.py  stock_log.py  transaction.py  user.py  warehouse.py
src/database/repositories/: __init__.py  account.py  base.py  crud.py  product.py  stock_log.py  transaction.py  user.py  warehouse.py
src/logs/: setup.py
src/logs/handlers/: elastic.py
src/security/: __init__.py  bcrypt_hasher.py  jwt_token.py
src/services/: __init__.py  account.py  factory.py  gateway.py  product.py  stock_log.py  transaction.py  user.py  warehouse.py
src/services/payment/: base.py  stub.py
src/services/security/: __init__.py  crypto_hasher.py  jwt_token.py
src/settings/: app.py  dependencies.py  endpoints.py
(+58 files in other folders)
