[tool.poetry]
name = "sonneshop"
version = "0.1.0"
description = ""
authors = ["Viktor Bagrov <Keramogranitus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
fastapi = "^0.115.0"
pydantic-settings = "^2.5.2"
aiosqlite = "^0.20.0"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
